--- a/css/my.css
+++ b/css/my.css
@@ -176,6 +176,10 @@
     background-color: #FFEBEE;
     }
 
+    .FO > img:first-of-type{
+    background-color: #E3D3B0;
+    }
+
 /*表单*/ 
     form{
     position          : relative;
@@ -185,21 +189,24 @@
     }
 
     legend{
+    font-size         : 23px;
     margin            : 35px 0px 8px 0px;
     transition        : all 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
  
     .show-ic{
+    border-radius     : 100%;
     height            : 35px;
     position          : absolute;
     top               : 0px;
     right             : 0px;
     opacity           : 0.7;
-    transition        : all 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    /*transition        : all 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);*/
+    transition        : all 350ms cubic-bezier(0.23, 1, 0.32, 1);
     }
 
     label,.label{
-    font-size         : 21px;
+    font-size         : 20px;
     }
 
     input[type=number]{
@@ -234,7 +241,7 @@
     }
 
     .form-span{
-    font-size         : 22px;
+    font-size         : 20px;
     }
   
 /*radio*/
