--- a/css/my.css
+++ b/css/my.css
@@ -122,6 +122,17 @@
     }
  
 /*主页-卡片*/
+    .open-gpu{
+	-webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    -moz-perspective: 1000;
+    -ms-perspective: 1000;
+    perspective: 1000;
+ 	}
+
     .home {
     /*text-align        : center;*/
     }
