--- a/css/my.css
+++ b/css/my.css
@@ -123,6 +123,12 @@
  
 /*主页-卡片*/
     .open-gpu{
+	 -webkit-transform: translateZ(0);
+    -moz-transform: translateZ(0);
+    -ms-transform: translateZ(0);
+    -o-transform: translateZ(0);
+    transform: translateZ(0);
+	  
 	-webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     -ms-backface-visibility: hidden;
