--- a/css/my.css
+++ b/css/my.css
@@ -128,6 +128,10 @@
     -ms-transform: translateZ(0);
     -o-transform: translateZ(0);
     transform: translateZ(0);
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 	  
 	-webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
