--- a/css/my.css
+++ b/css/my.css
@@ -18,9 +18,9 @@
     hr{
     opacity           : 0.3;
     /* IE 4-9 */  
-    filter            :alpha(opacity=30); 
+    filter            : alpha(opacity=30); 
     margin-bottom     : 2px;
-    height            : 2px;
+    height            : 1px;
     border-radius     : 10px;
     background-color  : #ECEFF1;
     }
@@ -124,27 +124,6 @@
     }
  
 /*主页-卡片*/
-    .open-gpu{
-	-webkit-transform: translateZ(0);
-    -moz-transform: translateZ(0);
-    -ms-transform: translateZ(0);
-    -o-transform: translateZ(0);
-    transform: translateZ(0);
-    -webkit-transform: translate3d(0, 0, 0);
-    -moz-transform: translate3d(0, 0, 0);
-    -ms-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
-	  
-	-webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-perspective: 1000;
-    -moz-perspective: 1000;
-    -ms-perspective: 1000;
-    perspective: 1000;
- 	}
-
     .home {
     /*text-align        : center;*/
     }
@@ -178,7 +157,7 @@
     left              : 0px;
     opacity           : 0.5;
     /* IE 4-9 */  
-    filter            :alpha(opacity=50); 
+    filter            : alpha(opacity=50); 
     color             : #fff;
     text-align        : center;
     line-height       : 48px;
@@ -213,6 +192,13 @@
     word-wrap         : break-word;
     }
 
+    .ie8{
+    height            : 30px;
+    }
+    .ie8-small{
+    height            : 10px;
+    }
+
     legend{
     font-size         : 23px;
     margin            : 35px 0px 8px 0px;
@@ -224,11 +210,11 @@
     height            : 35px;
     position          : absolute;
     top               : 0px;
+    top               : 30px\9;
     right             : 0px;
     opacity           : 0.7;
-    /* IE 4-9 */  
-    filter            :alpha(opacity=70); 
-    /*transition        : all 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);*/
+    /* IE 4-9 */filter:alpha(opacity=70); 
+    /*transition      : all 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);*/
     transition        : all 350ms cubic-bezier(0.23, 1, 0.32, 1);
     }
 
@@ -236,7 +222,7 @@
     font-size         : 20px;
     }
 
-    input[type=number]{
+    input/*[type=number]*/{
     font-size         : 20px;
     position          : relative;
     width             : 55%;
@@ -247,7 +233,7 @@
     padding-left      : 4px;
     }
 
-    input[type=number]:focus{
+    input/*[type=number]*/:focus{
     border-color      : #1976D2;
     transition        : all 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
@@ -346,7 +332,7 @@
     background-color  : #f08b3b;
     opacity           : 0;
     /* IE 4-9 */  
-    filter            :alpha(opacity=100); 
+    filter            :alpha(opacity=0); 
     }
    
 /*select*/ 
