--- a/css/my.css
+++ b/css/my.css
@@ -61,8 +61,16 @@
     height            : 210px;
     width             : 100%;
     text-align        : center;
-    margin-bottom     : 80px;
+    margin-bottom     : -40px;
     background-color  : #1976D2;
+    box-shadow        : 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
+    }
+
+    @media (max-width: 650px) {
+      .title{
+      z-index: 100;
+      margin-bottom     : 20px;
+      }
     }
 
     h1{
@@ -92,12 +100,11 @@
     height            : 60px;
     width             : 100%;
     margin            : 0;
-    position          : absolute;
-    top               : 210px;
+    position          : fixed;
     z-index           : 2;
-    background-color  : #1565C0;
-    box-shadow        : 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 5px 0 rgba(0,0,0,0.23);
-    transition        : height top 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    background-color  : #1976D2;
+   /* box-shadow        : 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 5px 0 rgba(0,0,0,0.23);
+   */ transition        : height top 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
 
     .menu > li{
