--- a/css/my.css
+++ b/css/my.css
@@ -57,46 +57,68 @@
  */
 
 /*标题-菜单*/
-    .title{
+    .top-bg{
     height            : 210px;
     width             : 100%;
     text-align        : center;
     margin-bottom     : -40px;
     background-color  : #1976D2;
-    box-shadow        : 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);
+    /* box-shadow     : 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);*/
     }
 
-    @media (max-width: 650px) {
-      .title{
-      z-index: 100;
-      margin-bottom     : 20px;
-      }
+    #moreIc{
+    height            : 42px;
+    width             : 42px;
+    position          : absolute;
+    z-index           : 1;
+    right             : 5px;
+    top               : 8px;
+    display           : inline-block;
+    }
+
+    #moreList{
+    min-height        : 80px;
+    min-width         : 60px;
+    position          : absolute;
+    right             : 10px;
+    top               : 15px;
+    list-style-type   : none;
+    /*display           : none;*/
+    z-index           : 3;
+    background-color  : #fff;
+    border-radius     : 2px;
+    box-shadow        : 0 10px 10px 0 rgba(0,0,0,.19), 0 6px 3px 0 rgba(0,0,0,.23);
+    }
+
+    #moreList>li>a{
+    font-size         : 20px;
+    line-height       : 36px;
+    text-decoration   : none;
+    margin            : 0px 10px 0px 10px;
     }
 
     h1{
     color             : #eee;
-    font-size         : 55px;
-    font-weight       : 300;
-    line-height       : 210px;/*垂直居中*/
+    font-weight       : 300; 
+    font-size         : 40px; 
+    position          : relative;
+    top               : 50px;
     margin            : 0; 
+    letter-spacing    : 3px;
+    text-align        : center;
     }
 
-  /*自适应*/
+    /*自适应*/
     @media (max-width: 480px) {
       h1 {font-size   : 48px;}
-      .menu{height    : 50px!important;}
-      .menu > li > a{
-      height          : 50px!important;
-      line-height     : 56px!important;
-      font-size       : 20px!important;
-      }
+      .top{height     : 50px!important;}
+      #more-ic{height : 35px; width:35px;}
     }
-
     @media (max-width: 450px) {
       h1 {font-size   : 40px;}
     }
 
-    .menu{
+    .top{
     height            : 60px;
     width             : 100%;
     margin            : 0;
@@ -105,29 +127,6 @@
     background-color  : #1976D2;
    /* box-shadow        : 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 5px 0 rgba(0,0,0,0.23);
    */ transition        : height top 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
-    }
-
-    .menu > li{
-    list-style-type   : none;/*去圆点*/
-    }
-
-    .menu > li > a{
-    height            : 60px;
-    line-height       : 65px;
-    padding           : 0px 10px 0px 18px;
-    width             : 50px;
-    float             : left;
-    text-decoration   : none;
-    font-size         : 22px;
-    font-weight       : 500;
-    position          : relative;
-    bottom            : 3px;
-    color             : #eee;
-    }
-
-    .menu > li > a:hover{
-    color            : rgba(255,255,255,0.7);
-    transition       : all 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
  
 /*主页-卡片*/
@@ -364,7 +363,3 @@
     }
 
 
-/*关于*/
-    .about{
-
-    }
