--- a/css/my.css
+++ b/css/my.css
@@ -106,6 +106,8 @@
     margin            : 0; 
     letter-spacing    : 3px;
     text-align        : center;
+    /*测试,js需改进*/
+    transition        : all top 150ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
 
     /*自适应*/
@@ -127,6 +129,14 @@
     background-color  : #1976D2;
    /* box-shadow        : 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 5px 0 rgba(0,0,0,0.23);
    */ transition        : height top 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    }
+
+    .blank{
+    position          : absolute;
+    z-index           : 1;
+    height            : 1500%;/*貌似有点bug= =*/
+    width             : 100%;
+    background-color  : rgba(0,0,0,.2);
     }
  
 /*主页-卡片*/
