--- a/css/my.css
+++ b/css/my.css
@@ -67,13 +67,14 @@
     }
 
     #moreIc{
-    height            : 42px;
-    width             : 42px;
+    height            : 32px;
+    width             : 32px;
     position          : absolute;
     z-index           : 1;
-    right             : 5px;
-    top               : 8px;
+    right             : -10px;
+    top               : 2px;
     display           : inline-block;
+    border            : solid 15px #1976D2;
     }
 
     #moreList{
@@ -81,9 +82,9 @@
     min-width         : 60px;
     position          : absolute;
     right             : 10px;
-    top               : 15px;
+    top               : 25px;
     list-style-type   : none;
-    /*display           : none;*/
+    /*display         : none;*/
     z-index           : 3;
     background-color  : #fff;
     border-radius     : 2px;
@@ -92,9 +93,14 @@
 
     #moreList>li>a{
     font-size         : 20px;
-    line-height       : 36px;
+    line-height       : 45px;
     text-decoration   : none;
-    margin            : 0px 10px 0px 10px;
+    margin            : 5px 40px 5px 20px;
+    }
+
+    #moreList>li:hover,#moreList>li:active{
+    background-color  : rgb(242, 242, 242);
+    transition        : all 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
 
     h1{
@@ -114,7 +120,8 @@
     @media (max-width: 480px) {
       h1 {font-size   : 48px;}
       .top{height     : 50px!important;}
-      #more-ic{height : 35px; width:35px;}
+      #moreIc{height  : 28px; width:28px;
+              top     : 0px;right:-10px;}
     }
     @media (max-width: 450px) {
       h1 {font-size   : 40px;}
@@ -136,7 +143,7 @@
     z-index           : 1;
     height            : 1500%;/*貌似有点bug= =*/
     width             : 100%;
-    background-color  : rgba(0,0,0,.2);
+    background-color  : rgba(0,0,0,0);
     }
  
 /*主页-卡片*/
