--- a/css/my.css
+++ b/css/my.css
@@ -62,19 +62,31 @@
     width             : 100%;
     text-align        : center;
     margin-bottom     : -40px;
+    position: relative;
     background-color  : #1976D2;
     /* box-shadow     : 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);*/
+    }
+
+    #back{
+    height            : 32px;
+    width             : 32px;
+    position          : absolute;
+    z-index           : 3;
+    left              : -4px;
+    top               : 4px;
+    display           : inline-block;
+    border            : solid 10px rgba(0,0,0,0);
     }
 
     #moreIc{
     height            : 32px;
     width             : 32px;
     position          : absolute;
-    z-index           : 1;
+    z-index           : 3;
     right             : -6px;
     top               : 4px;
     display           : inline-block;
-    border            : solid 10px #1976D2;
+    border            : solid 10px rgba(0,0,0,0);
     }
 
     #moreList{
@@ -95,6 +107,8 @@
     font-size         : 20px;
     line-height       : 45px;
     text-decoration   : none;
+    font-size         : 20px;
+    font-weight       : 200;
     margin            : 5px 40px 5px 20px;
     }
 
@@ -105,26 +119,28 @@
 
     h1{
     color             : #eee;
-    font-weight       : 300; 
+    font-weight       : 100; 
     font-size         : 40px; 
     position          : relative;
     top               : 50px;
     margin            : 0; 
-    letter-spacing    : 3px;
+    letter-spacing    : 2px;
     text-align        : center;
     /*测试,js需改进*/
     transition        : all top 150ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
 
     /*自适应*/
-    @media (max-width: 480px) {
-      h1 {font-size   : 48px;}
-      .top{height     : 50px!important;}
+    @media (max-width : 480px) {
+      /*h1 {font-size : 36px;}*/
+      /*.top{height   : 50px!important;}*/
       #moreIc{height  : 28px; width:28px;
-              top     : 1px;right:-9px;}
+              right   : -8px;}
+      #back{height  : 28px; width:28px;
+              right   : -8px;}
     }
     @media (max-width: 450px) {
-      h1 {font-size   : 40px;}
+      /*h1 {font-size   : 32px;}*/
     }
 
     .top{
@@ -134,8 +150,8 @@
     position          : fixed;
     z-index           : 2;
     background-color  : #1976D2;
-   /* box-shadow        : 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 5px 0 rgba(0,0,0,0.23);
-   */ transition        : height top 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+   /* box-shadow      : 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 5px 0 rgba(0,0,0,0.23);
+   */ transition      : height top 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
 
     .blank{
@@ -148,7 +164,8 @@
  
 /*主页-卡片*/
     .home {
-    /*text-align        : center;*/
+    /*text-align      : center;*/
+    min-height        : 1000px;
     }
 
     .card{
