--- a/css/my.css
+++ b/css/my.css
@@ -93,8 +93,8 @@
     min-height        : 80px;
     min-width         : 60px;
     position          : absolute;
-    right             : 10px;
-    top               : 25px;
+    right             : 5px;
+    top               : 10px;
     list-style-type   : none;
     /*display         : none;*/
     z-index           : 3;
@@ -103,13 +103,13 @@
     box-shadow        : 0 10px 10px 0 rgba(0,0,0,.19), 0 6px 3px 0 rgba(0,0,0,.23);
     }
 
-    #moreList>li>a{
+    #moreList>li>div{
     font-size         : 20px;
     line-height       : 45px;
     text-decoration   : none;
-    font-size         : 20px;
+    font-size         : 15px;
     font-weight       : 200;
-    margin            : 5px 40px 5px 20px;
+    margin            : 8px 50px 8px 25px;
     }
 
     #moreList>li:hover,#moreList>li:active{
@@ -156,9 +156,10 @@
 
     .blank{
     position          : absolute;
-    z-index           : 1;
+    z-index           : 2;
     height            : 1500%;/*貌似有点bug= =*/
     width             : 100%;
+    top               : 0px;
     background-color  : rgba(0,0,0,0);
     }
  
