--- a/css/my.css
+++ b/css/my.css
@@ -74,6 +74,7 @@
     z-index           : 3;
     left              : -4px;
     top               : 4px;
+    cursor            : pointer;
     display           : inline-block;
     border            : solid 10px rgba(0,0,0,0);
     }
@@ -85,6 +86,7 @@
     z-index           : 3;
     right             : -6px;
     top               : 4px;
+    cursor            : pointer;
     display           : inline-block;
     border            : solid 10px rgba(0,0,0,0);
     }
@@ -101,6 +103,10 @@
     background-color  : #fff;
     border-radius     : 2px;
     box-shadow        : 0 10px 10px 0 rgba(0,0,0,.19), 0 6px 3px 0 rgba(0,0,0,.23);
+    }
+
+    #moreList>li{
+    cursor            : pointer;
     }
 
     #moreList>li>div{
@@ -249,6 +255,7 @@
     .show-ic{
     border-radius     : 100%;
     height            : 35px;
+    cursor            : pointer;
     position          : absolute;
     top               : 0px;
     top               : 30px\9;
