--- a/css/my.css
+++ b/css/my.css
@@ -62,7 +62,7 @@
     width             : 100%;
     text-align        : center;
     margin-bottom     : -40px;
-    position: relative;
+    position          : relative;
     background-color  : #1976D2;
     /* box-shadow     : 0 2px 5px 0 rgba(0,0,0,.16), 0 2px 5px 0 rgba(0,0,0,.23);*/
     }
@@ -150,6 +150,7 @@
     .top{
     height            : 60px;
     width             : 100%;
+    min-width         : 270px;
     margin            : 0;
     position          : fixed;
     z-index           : 20;
@@ -171,6 +172,7 @@
     .home {
     /*text-align      : center;*/
     min-height        : 1000px;
+    transition        : all 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
 
     .card{
@@ -179,6 +181,8 @@
     position          : relative;
     background-color  : #fff;
     width             : 300px;
+    min-width         : 270px;
+    max-width         : 350px;
     margin            : 0px 8px 15px 8px;
     border-radius     : 2px;
     box-shadow        : 0 1px 1.5px 0 rgba(0,0,0,0.12), 0 1px 1px 0 rgba(0,0,0,0.24);
@@ -195,10 +199,11 @@
 
     .img-title{
     width             : 100%;
+    height            : 50px;
     float             : left; 
     position          : absolute;
     margin-top        : 218px;
-    top               : -53px;
+    top               : -55px;
     left              : 0px;
     opacity           : 0.5;
     /* IE 4-9 */  
