--- a/css/my.css
+++ b/css/my.css
@@ -98,10 +98,9 @@
     right             : 5px;
     top               : 10px;
     list-style-type   : none;
-    /*display         : none;*/
     z-index           : 3;
     background-color  : #fff;
-    border-radius     : 2px;
+    /*border-radius     : 2px;*/
     box-shadow        : 0 10px 10px 0 rgba(0,0,0,.19), 0 6px 3px 0 rgba(0,0,0,.23);
     }
 
