--- a/css/my.css
+++ b/css/my.css
@@ -171,6 +171,7 @@
 /*主页-卡片*/
     .home {
     /*text-align      : center;*/
+    width             : 100%;
     min-height        : 1000px;
     transition        : all 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
@@ -396,7 +397,7 @@
     }
 
     select:hover{
-    box-shadow: 0 1px 1.5px 0 rgba(0,0,0,.12), 0 1px 1px 0 rgba(0,0,0,.24);
+    box-shadow        : 0 1px 1.5px 0 rgba(0,0,0,.12), 0 1px 1px 0 rgba(0,0,0,.24);
     }
 
     option{
@@ -406,4 +407,72 @@
     border-radius     : 3px;  
     }
 
+/*setting*/
+.setting{
+    width             : 100%;
+    display           : none; 
+    background-color  : #fff;
+    position          : absolute;
+    top               : 60px;
+    box-shadow        : 0 1px 1.5px 0 rgba(0,0,0,0.12), 0 1px 1px 0 rgba(0,0,0,0.24);
+}
 
+.setting > *{
+    position          : relative;
+    width             : 100%;
+    height            : 52px;
+ }    
+
+.setting > * > div{
+    position          : relative;
+    height            : 100%;
+    margin-left       : 52px;
+    /*float           : right;*/
+    border-bottom     : solid 1px #E0E0E0;
+    }
+
+.setting > * > div:hover,.setting > * > div:active{
+   /* background-color: rgb(242, 242, 242);
+    transition        : all 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+*/}
+
+.setting > * > *,.setting > * > *>*{
+    display           : inline-block;
+}
+
+.setting > * > *>input{
+    position          : relative;
+    top               : -28px;
+    right             : 25px;
+    width             : 105px;
+    float             : right;
+    height            : 30px;
+}
+
+.ic{
+    position          : absolute;
+    top               : 10px;
+    left              : 10px;
+    display           : inline-block;
+    height            : 32px;
+    width             : 32px;
+    opacity           : 0.6;
+    /* IE 4-9 */  
+    filter            : alpha(opacity=60); 
+}
+
+p{
+    position          : relative;
+    top               : 1px;
+    left              : 12px;
+    font-size         : 18px;
+    color             : #424242;
+}
+
+.p2{
+    position          : relative;
+    top               : -8px;
+    left              : 12px;
+    font-size         : 14px;
+    color             : #4DB6AC;
+}
