--- a/css/my.css
+++ b/css/my.css
@@ -27,25 +27,25 @@
 
     /*选中文本时样式*/
     ::selection {
-    background        :#f08b3b; 
-    color             :#fff;
+    background        : #f08b3b; 
+    color             : #fff;
     }
     
-    ::-moz-selection {
-    background        :#f08b3b; 
-    color             :#fff;
+    /*::-moz-selection {
+    background        : #f08b3b; 
+    color             : #fff;
     }
     
     ::-webkit-selection {
-    background        :#f08b3b; 
-    color             :#fff;
+    background        : #f08b3b; 
+    color             : #fff;
     }
-
+*/
  /*自定义滚动条*/
  /* ::-webkit-scrollbar{
     width             : 12px;
     height            : 12px;
-    background-color:rgba(200,200,200,0.9);
+    background-color  : rgba(200,200,200,0.9);
     }
 
     ::-webkit-scrollbar-thumb{
@@ -72,7 +72,7 @@
     width             : 32px;
     position          : absolute;
     z-index           : 3;
-    /*left              : 4px;*/
+    /*left            : 4px;*/
     top               : 4px;
     cursor            : pointer;
     display           : inline-block;
@@ -100,7 +100,7 @@
     list-style-type   : none;
     z-index           : 3;
     background-color  : #fff;
-    /*border-radius     : 2px;*/
+    /*border-radius   : 2px;*/
     box-shadow        : 0 10px 10px 0 rgba(0,0,0,.19), 0 6px 3px 0 rgba(0,0,0,.23);
     }
 
@@ -141,9 +141,9 @@
       /*h1 {font-size : 36px;}*/
       /*.top{height   : 50px!important;}*/
       #moreIc{height  : 28px; width:28px;
-              /*right   : -8px;*/}
-      #back{height  : 28px; width:28px;
-              /*right   : -8px;*/}
+              /*right : -8px;*/}
+      #back{height    : 28px; width:28px;
+              /*right : -8px;*/}
     }
 
     .top{
@@ -152,7 +152,7 @@
     min-width         : 270px;
     margin            : 0;
     position          : fixed;
-    /*border-bottom: solid #eee 2px;*/
+    /*border-bottom   : solid #eee 2px;*/
     z-index           : 20;
     background-color  : #1976D2;
    /* box-shadow      : 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 5px 0 rgba(0,0,0,0.23);
@@ -171,8 +171,7 @@
 /*主页-卡片*/
     .home {
     /*text-align      : center;*/
-    width             : 100%;
-    min-height        : 1000px;
+    /*min-height        : 1000px;*/
     transition        : all 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }
 
@@ -228,11 +227,11 @@
     }
 
     .CC > img:first-of-type{
-    background-color: #FFEBEE;
+    background-color  : #FFEBEE;
     }
 
     .FO > img:first-of-type{
-    background-color: #E3D3B0;
+    background-color  : #E3D3B0;
     }
 
 /*表单*/ 
@@ -264,7 +263,7 @@
     top               : 30px\9;
     right             : 0px;
     opacity           : 0.7;
-    /* IE 4-9 */filter:alpha(opacity=70); 
+    /* IE 4-9 */filter: alpha(opacity=70); 
     /*transition      : all 350ms cubic-bezier(0.455, 0.03, 0.515, 0.955);*/
     transition        : all 350ms cubic-bezier(0.23, 1, 0.32, 1);
     }
@@ -323,7 +322,7 @@
     transform         : scale(0.5);
     opacity           : 0.5;
     /* IE 4-9 */  
-    filter            :alpha(opacity=50); 
+    filter            : alpha(opacity=50); 
     }
  
     .radio input {
@@ -331,7 +330,7 @@
     height            : 1px;
     opacity           : 0;
     /* IE 4-9 */  
-    filter            :alpha(opacity=0); 
+    filter            : alpha(opacity=0); 
     }
  
     .radio input:checked + .outer .inner {
@@ -340,7 +339,7 @@
     transform         : scale(1);
     opacity           : 1;
     /* IE 4-9 */  
-    filter            :alpha(opacity=100); 
+    filter            : alpha(opacity=100); 
     }
  
     .radio input:checked + .outer { 
@@ -353,7 +352,7 @@
     transform         : scale(1);
     opacity           : 1;
     /* IE 4-9 */  
-    filter            :alpha(opacity=100); 
+    filter            : alpha(opacity=100); 
     background-color  : #e67012;
     }
  
@@ -383,7 +382,7 @@
     background-color  : #f08b3b;
     opacity           : 0;
     /* IE 4-9 */  
-    filter            :alpha(opacity=0); 
+    filter            : alpha(opacity=0); 
     }
    
 /*select*/ 
@@ -408,71 +407,106 @@
     }
 
 /*setting*/
-.setting{
+    .setting{
     width             : 100%;
     display           : none; 
     background-color  : #fff;
-    position          : absolute;
-    top               : 60px;
+	margin-top        : 5px;
+    position          : relative;
     box-shadow        : 0 1px 1.5px 0 rgba(0,0,0,0.12), 0 1px 1px 0 rgba(0,0,0,0.24);
-}
+    }
+	
+	#set1{
+	margin-top        : 40px;
+	}
 
-.setting > *{
+    .setting > *{
     position          : relative;
     width             : 100%;
-    height            : 52px;
- }    
+    height          : 65px;
+    }    	
 
-.setting > * > div{
+	.setting > div{
+	/*min-height:65px;*/
+	}
+	
+    .setting > * > div{
     position          : relative;
     height            : 100%;
-    margin-left       : 52px;
+    margin-left       : 65px;
     /*float           : right;*/
     border-bottom     : solid 1px #E0E0E0;
     }
+	
+    .setting > *:nth-child(2) {
+    /*margin-top      :40px;*/
+    }
 
-.setting > * > div:hover,.setting > * > div:active{
+    .setting > div:last-child > div{
+    border-bottom     : none;
+    }
+
+    .setting > * > div:hover,.setting > * > div:active{
    /* background-color: rgb(242, 242, 242);
     transition        : all 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
-*/}
+   */}
 
-.setting > * > *,.setting > * > *>*{
+    .setting > * > *,.setting > * > *>*{
     display           : inline-block;
-}
+    }
 
-.setting > * > *>input{
-    position          : relative;
-    top               : -28px;
+    .setting > * > *>input{
+    position          : absolute;
+    top               : 2px;
     right             : 25px;
     width             : 105px;
     float             : right;
     height            : 30px;
-}
+    }
+	
+	.settingTittle{
+    position          : relative;
+    font-size         : 16px;
+	color             : #1976D2;
+	width             : 100px;
+	top               : 16px;
+	margin-left       : 20px;
+	height            : 40px;
+    }
 
-.ic{
+    .ic{
     position          : absolute;
-    top               : 10px;
-    left              : 10px;
+    top               : 17px;
+    left              : 17px;
     display           : inline-block;
-    height            : 32px;
-    width             : 32px;
+    height            : 31px;
+    width             : 31px;
     opacity           : 0.6;
     /* IE 4-9 */  
     filter            : alpha(opacity=60); 
-}
+    }
 
-p{
+    p{
     position          : relative;
-    top               : 1px;
+    top               : 8px;
     left              : 12px;
     font-size         : 18px;
-    color             : #424242;
-}
+    color             : #202020;
+    }
 
-.p2{
+    .nop2{
+    top               : 17px;
+    }
+
+    .p2{
     position          : relative;
-    top               : -8px;
+    margin-top        : 5px;
     left              : 12px;
-    font-size         : 14px;
-    color             : #4DB6AC;
-}
+    font-size         : 15px;
+    color             : #737373;
+    }
+
+    @media (max-width : 380px) {
+    .p2{
+	/*width             : 160px;*/
+	}
