--- a/css/my.css
+++ b/css/my.css
@@ -27,10 +27,10 @@
 
     /*选中文本时样式*/
     ::selection {
-    background        : #f08b3b; 
-    color             : #fff;
+    background        :#f08b3b;
+    color             :#fff
     }
-    
+
     /*::-moz-selection {
     background        : #f08b3b; 
     color             : #fff;
@@ -39,8 +39,8 @@
     ::-webkit-selection {
     background        : #f08b3b; 
     color             : #fff;
-    }
-*/
+    }*/
+
  /*自定义滚动条*/
  /* ::-webkit-scrollbar{
     width             : 12px;
@@ -407,7 +407,7 @@
     }
 
 /*setting*/
-    .setting{
+    .set{
     width             : 100%;
     display           : none; 
     background-color  : #fff;
@@ -420,17 +420,17 @@
 	margin-top        : 40px;
 	}
 
-    .setting > *{
+    .set > *{
     position          : relative;
     width             : 100%;
-    height          : 65px;
+    height            : 65px;
     }    	
 
-	.setting > div{
+	.set > div{
 	/*min-height:65px;*/
 	}
 	
-    .setting > * > div{
+    .set > * > div{
     position          : relative;
     height            : 100%;
     margin-left       : 65px;
@@ -438,30 +438,31 @@
     border-bottom     : solid 1px #E0E0E0;
     }
 	
-    .setting > *:nth-child(2) {
+    .set > *:nth-child(2) {
     /*margin-top      :40px;*/
     }
 
-    .setting > div:last-child > div{
+    .set > div:last-child > div{
     border-bottom     : none;
     }
 
-    .setting > * > div:hover,.setting > * > div:active{
+    .set > * > div:hover,.set > * > div:active{
    /* background-color: rgb(242, 242, 242);
     transition        : all 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
    */}
 
-    .setting > * > *,.setting > * > *>*{
+    .set > * > *,.set > * > *>*{
     display           : inline-block;
     }
 
-    .setting > * > *>input{
+    .set > * > *>.colorSelect{
     position          : absolute;
-    top               : 2px;
-    right             : 25px;
-    width             : 105px;
-    float             : right;
-    height            : 30px;
+    top               : 15px;
+    right             : 10px;
+    border-radius     : 100%;
+    background-color  : #000;
+    width             : 35px;
+    height            : 35px;
     }
 	
 	.settingTittle{
