--- a/css/my.css
+++ b/css/my.css
@@ -460,10 +460,17 @@
     top               : 15px;
     right             : 10px;
     border-radius     : 100%;
-    background-color  : #000;
     width             : 35px;
     height            : 35px;
     }
+	
+	#themeColor{
+	background-color  : #1565c0;
+	}
+	
+	#secondColor{
+	background-color  : #f08b3b;
+	}
 	
 	.settingTittle{
     position          : relative;
@@ -506,8 +513,21 @@
     font-size         : 15px;
     color             : #737373;
     }
-
-    @media (max-width : 380px) {
-    .p2{
-	/*width             : 160px;*/
+	
+	.floatLayer{
+	position:absolute;
+	height:80%;
+	max-height:400px;
+	width:80%;
+	max-width:400px;
+	padding:10px 10px 10px 10px;
+	background-color:#fff;
+	box-shadow        : 0 10px 10px 0 rgba(0,0,0,.19), 0 6px 3px 0 rgba(0,0,0,.23);
 	}
+	
+	.TCInput , .SCInput{
+    height:90%!important;
+	margin-left:5%;
+    
+	}
+	
