--- a/css/my.css
+++ b/css/my.css
@@ -154,10 +154,10 @@
 	.h1{
 	display:none;
 	font-size:20px;
-	position:absolute;
+	position:static;
 	color:#fff;
-	left:50px;
-	top:18px;
+	margin-top: 15px;
+	margin-left: 48px;
 	}
 
     /*for different screen size*/
@@ -404,51 +404,65 @@
     }
 	
 /***material button***/
-.onoffswitch {
-    position: relative;
-	width: 26px;float:right;top:22px;right:18px;
-    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
-}
+    .onoffswitch {
+    position          : relative;
+    width             : 26px;
+    float             : right;
+    top               : 22px;
+    right             : 18px;
+    -webkit-user-select:none; 
+    -moz-user-select  :none; 
+    -ms-user-select   : none;
+    }
+    
+    .onoffswitch-checkbox {
+    display           : none;
+    }
+    
+    .onoffswitch-label {
+    display           : block; 
+    overflow          : hidden;
+    cursor            : pointer;
+    height            : 16px;
+    padding           : 0;
+    line-height       : 20px;
+    border            : 0px solid #FFFFFF;
+    border-radius     : 31px;
+    background-color  : #9E9E9E;
+    }
 
-.onoffswitch-checkbox {
-    display: none;
-}
-
-.onoffswitch-label {
-    display: block; overflow: hidden; cursor: pointer;
-    height: 16px; padding: 0; line-height: 20px;
-    border: 0px solid #FFFFFF; border-radius: 31px;
-    background-color: #9E9E9E;
-}
-
-.onoffswitch-label:before {
-    content: "";
-    display: block; width: 20px;height:20px; margin: -5.5px;
-    background: #FFFFFF;
-    position: absolute; bottom: 0;
-    right: 19px;top:3px;
-	transition : right 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
-    border-radius: 31px;
-    box-shadow: 0 6px 12px 0px #757575;
-}
-
-.onoffswitch-checkbox:checked + .onoffswitch-label {
-    background-color: #42A5F5;
-}
-
-.onoffswitch-checkbox:checked + .onoffswitch-label, .onoffswitch-checkbox:checked + .onoffswitch-label:before {
-   border-color: #42A5F5;
-}
-
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
-    margin-left: 0;
-}
-
-.onoffswitch-checkbox:checked + .onoffswitch-label:before {
-    right: 0px; 
-    background-color: #2196F3; 
-    box-shadow: 3px 6px 18px 0px rgba(0, 0, 0, 0.2);
-}
+    .onoffswitch-label:before {
+    content           : "";
+    display           : block;
+    width             : 20px;
+    height            : 20px; margin: -5.5px;
+    background        : #FFFFFF;
+    position          : absolute; 
+    bottom            : 0;
+    right             : 19px;
+    top               : 3px;
+    border-radius     : 31px;
+    box-shadow        : 0 6px 12px 0px #757575;
+    transition        : right 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    }
+    
+    .onoffswitch-checkbox:checked + .onoffswitch-label {
+    background-color  : #42A5F5;
+    }
+   
+    .onoffswitch-checkbox:checked + .onoffswitch-label, .onoffswitch-checkbox:checked + .onoffswitch-label:before {
+    border-color      : #42A5F5;
+    }
+    
+    .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left       : 0;
+    }
+    
+    .onoffswitch-checkbox:checked + .onoffswitch-label:before {
+    right             : 0px; 
+    background-color  : #2196F3; 
+    box-shadow        : 3px 6px 18px 0px rgba(0, 0, 0, 0.2);
+    }
    
 /*select*/ 
     select{
@@ -593,3 +607,7 @@
 	transition        : all 280ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
     }            
 	
+    #opacitySet{
+    background-color: #000;
+    opacity: 0.5;
+    }
